--- a/pkg/autpgrp/htm/indxN.htm
+++ b/pkg/autpgrp/htm/indxN.htm
@@ -8,11 +8,15 @@
 <a href="indxI.htm">I</A>
 <a href="indxN.htm">N</A>
 <a href="indxO.htm">O</A>
+<a href="indxP.htm">P</A>
 <a href="indxS.htm">S</A>
 <a href="indxT.htm">T</A>
 <dt>NICE_STAB <a href="CHAP004.htm#SSEC004.1">4.4.1</a> 
+<dt>NumberOfClass2LieAlgbras <a href="CHAP005.htm#">5.0</a> 
+<dt>NumberOfClass2LieAlgebras <a href="CHAP005.htm#">5.0</a> 
+<dt>NumberOfPClass2PGroups <a href="CHAP005.htm#">5.0</a> <a href="CHAP005.htm#">5.0</a> 
 </dl><p>
 [<a href="chapters.htm">Up</a>]<p>
 <P>
-<address>AutPGrp manual<br>August 2003
+<address>AutPGrp manual<br>Juli 2009
 </address></body></html>
