--- a/pkg/autpgrp/htm/indxA.htm
+++ b/pkg/autpgrp/htm/indxA.htm
@@ -8,14 +8,16 @@
 <a href="indxI.htm">I</A>
 <a href="indxN.htm">N</A>
 <a href="indxO.htm">O</A>
+<a href="indxP.htm">P</A>
 <a href="indxS.htm">S</A>
 <a href="indxT.htm">T</A>
 <dt>Acknowledgements <a href="CHAP004.htm#SECT006">4.6</a> 
+<dt>Additional Features of the Package <a href="CHAP005.htm">5.0</a> 
 <dt>An interactive version of the algorithm <a href="CHAP004.htm#SECT005">4.5</a> 
 <dt>AutomorphismGroup <a href="CHAP002.htm#">2.0</a> 
 <dt>AutomorphismGroupPGroup <a href="CHAP003.htm#">3.0</a> 
 </dl><p>
 [<a href="chapters.htm">Up</a>]<p>
 <P>
-<address>AutPGrp manual<br>August 2003
+<address>AutPGrp manual<br>Juli 2009
 </address></body></html>
