--- a/pkg/autpgrp/htm/indxC.htm
+++ b/pkg/autpgrp/htm/indxC.htm
@@ -8,6 +8,7 @@
 <a href="indxI.htm">I</A>
 <a href="indxN.htm">N</A>
 <a href="indxO.htm">O</A>
+<a href="indxP.htm">P</A>
 <a href="indxS.htm">S</A>
 <a href="indxT.htm">T</A>
 <dt>CHOP_MULT <a href="CHAP004.htm#SSEC003.1">4.3.1</a> 
@@ -15,5 +16,5 @@
 </dl><p>
 [<a href="chapters.htm">Up</a>]<p>
 <P>
-<address>AutPGrp manual<br>August 2003
+<address>AutPGrp manual<br>Juli 2009
 </address></body></html>
