--- a/pkg/autpgrp/htm/indxP.htm
+++ b/pkg/autpgrp/htm/indxP.htm
@@ -1,6 +1,6 @@
-<html><head><title>AutPGrp : a GAP 4 package - Index O</title></head>
+<html><head><title>AutPGrp : a GAP 4 package - Index P</title></head>
 <body text="#000000" bgcolor="#ffffff">
-<h1><font face="Gill Sans,Helvetica,Arial">AutPGrp</font> : a <font face="Gill Sans,Helvetica,Arial">GAP</font> 4 package - Index O</h1>
+<h1><font face="Gill Sans,Helvetica,Arial">AutPGrp</font> : a <font face="Gill Sans,Helvetica,Arial">GAP</font> 4 package - Index P</h1>
 <p>
 <a href="theindex.htm">_</A>
 <a href="indxA.htm">A</A>
@@ -11,7 +11,7 @@
 <a href="indxP.htm">P</A>
 <a href="indxS.htm">S</A>
 <a href="indxT.htm">T</A>
-<dt>Outline of the algorithm <a href="CHAP004.htm#SECT001">4.1</a> 
+<dt>PcGroupAutPGroup <a href="CHAP003.htm#">3.0</a> 
 </dl><p>
 [<a href="chapters.htm">Up</a>]<p>
 <P>
