--- a/pkg/autpgrp/htm/indxT.htm
+++ b/pkg/autpgrp/htm/indxT.htm
@@ -8,6 +8,7 @@
 <a href="indxI.htm">I</A>
 <a href="indxN.htm">N</A>
 <a href="indxO.htm">O</A>
+<a href="indxP.htm">P</A>
 <a href="indxS.htm">S</A>
 <a href="indxT.htm">T</A>
 <dt>The automorphism group method <a href="CHAP002.htm">2.0</a> 
@@ -16,5 +17,5 @@
 </dl><p>
 [<a href="chapters.htm">Up</a>]<p>
 <P>
-<address>AutPGrp manual<br>August 2003
+<address>AutPGrp manual<br>Juli 2009
 </address></body></html>
