--- a/pkg/autpgrp/htm/theindex.htm
+++ b/pkg/autpgrp/htm/theindex.htm
@@ -8,10 +8,11 @@
 <a href="indxI.htm">I</A>
 <a href="indxN.htm">N</A>
 <a href="indxO.htm">O</A>
+<a href="indxP.htm">P</A>
 <a href="indxS.htm">S</A>
 <a href="indxT.htm">T</A>
 </dl><p>
 [<a href="chapters.htm">Up</a>]<p>
 <P>
-<address>AutPGrp manual<br>August 2003
+<address>AutPGrp manual<br>Juli 2009
 </address></body></html>
